fixing dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ main {
 }
 
 body.dark main {
-  background-color: #070707;
+  background-color: #111B21;
 }
 
 main .carousel {
@@ -65,7 +65,7 @@ main .card {
 
 .nav-item .nav-link .switch.active {
   background-color: orange;
-  color: #070707;
+  color: #111B21;
 }
 
 .nav-item .nav-link .switch.active::after {
@@ -91,7 +91,7 @@ main .card {
 body.dark .navbar {
   -webkit-transition: 0.3s ease-in;
   transition: 0.3s ease-in;
-  background-color: #070707;
+  background-color: #111B21;
   border-bottom: 1px solid white;
 }
 
@@ -123,7 +123,7 @@ body.dark .navbar a:hover {
 body.dark .search-bottom {
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  background-color: #070707;
+  background-color: #111B21;
 }
 
 .cart-modal-overlay {
@@ -163,7 +163,7 @@ body.dark .search-bottom {
 body.dark .section-2 .filters {
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  background-color: #070707;
+  background-color: #111B21;
   border-bottom: 1px solid white;
   color: white;
 }
@@ -181,7 +181,7 @@ body.dark .section-2 .filters {
 body.dark .footer {
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  background-color: #070707;
+  background-color: #111B21;
   border-top: 1px solid white;
 }
 
