--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -10,4 +10,4 @@ $yellow:  #ffc107;
 $green:   #198754;
 $teal:    #20c997;
 $cyan:    #0dcaf0;
-$dark:    rgb(7, 7, 7);
+$dark:    #111B21;
